--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
@@ -25,33 +25,40 @@
             <h2>Witaj</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
+            <a><i class="fab fa-facebook-f"></i></a>
+            <a><i class="fab fa-facebook-f"></i></a>
+            <a><i class="fab fa-facebook-f"></i></a>
+            <a><i class="fab fa-facebook-f"></i></a>
         </div>
     </div>
     <div class="examples">
-        <div>
-            <img class="left" src="#">
+        <div class="test">
+            <img class="left" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg">
             <div class="description">
                 <h2 class="name">Logo</h2>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ad.
                 </p>
             </div>
         </div>
-        <div>
-            <img class="left" src="#">
+        <div class="test">
+            <img class="left" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg">
             <div class="description">
                 <h2 class="name">Banery</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, itaque.</p>
             </div>
         </div>
-        <div>
-            <img class="left" src="#">
+        <div class="test">
+            <img class="left" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg">
             <div class="description">
                 <h2 class="name">Inne</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, placeat!</p>
             </div>
         </div>
     </div>
-    <div class="red">Text</div>
+    <footer class="footer">Made with <i class="fas fa-heart"></i></footer>
+
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
 </body>
 
 </html>
