--- a/index.html
+++ b/index.html
@@ -9,55 +9,55 @@
 </head>
 
 <body>
+
     <nav class="nav-bar">
-        <ul class="nav-items">
-            <li class="nav-item">Start</li>
-            <li class="nav-item">CV</li>
-            <li class="nav-item">Galeria</li>
-            <li class="color nav-item">Kontakt</li>
+        <ul>
+            <li><a class="active" href="#home">Start</a></li>
+            <li><a href="#news">CV</a></li>
+            <li><a href="#contact">Galeria</a></li>
+            <li><a href="#about">Kontakt</a></li>
         </ul>
     </nav>
-    <div class="container">
-        <div class="photo child">
-            <img src="assets/80472572_2367659296877934_6362717796727521280_n.jpg">
+    <div class="container" style="margin-left:25%;padding:1px 16px;height:1000px">
+        <div class=" photo child ">
+            <img class="my-photo" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
         </div>
-        <div class="about child">
+        <div class="about child ">
             <h2>Witaj</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
-            <a><i class="fab fa-facebook-f"></i></a>
-            <a><i class="fab fa-facebook-f"></i></a>
-            <a><i class="fab fa-facebook-f"></i></a>
-            <a><i class="fab fa-facebook-f"></i></a>
+            <a><i class="fab fa-facebook-f "></i></a>
+            <a><i class="fab fa-facebook-f "></i></a>
+            <a><i class="fab fa-facebook-f "></i></a>
+            <a><i class="fab fa-facebook-f "></i></a>
         </div>
     </div>
-    <div class="examples">
-        <div class="test">
-            <img class="left" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg">
-            <div class="description">
-                <h2 class="name">Logo</h2>
+    <div class="examples " style="margin-left:25%;padding:1px 16px;height:1000px">
+        <div class="test ">
+            <img class="left " src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
+            <div class="description ">
+                <h2 class="name ">Logo</h2>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ad.
                 </p>
             </div>
         </div>
-        <div class="test">
-            <img class="left" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg">
-            <div class="description">
-                <h2 class="name">Banery</h2>
+        <div class="test ">
+            <img class="left " src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
+            <div class="description ">
+                <h2 class="name ">Banery</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, itaque.</p>
             </div>
         </div>
-        <div class="test">
-            <img class="left" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg">
-            <div class="description">
-                <h2 class="name">Inne</h2>
+        <div class="test ">
+            <img class="left " src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
+            <div class="description ">
+                <h2 class="name ">Inne</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, placeat!</p>
             </div>
         </div>
     </div>
-    <footer class="footer">Made with <i class="fas fa-heart"></i></footer>
 
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js "></script>
 
 </body>
 
