chanching layout and colors;

--- a/index.html
+++ b/index.html
@@ -5,53 +5,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link type="text/css" rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Akronim|Crimson+Text&display=swap" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="dev-assets/custom.css">
 </head>
 
-<body>
+<body class="body">
 
     <nav class="nav-bar">
-        <ul>
-            <li><a class="active" href="#home">Start</a></li>
-            <li><a href="#news">CV</a></li>
-            <li><a href="#contact">Galeria</a></li>
-            <li><a href="#about">Kontakt</a></li>
-        </ul>
-    </nav>
-    <div class="container" style="margin-left:25%;padding:1px 16px;height:1000px">
-        <div class=" photo child ">
-            <img class="my-photo" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
+        <div class="circle">
+            <ul>
+                <li><a class="active" href="index.html">Start</a></li>
+                <li><a href="#news">CV</a></li>
+                <li><a href="#contact">Galeria</a></li>
+                <li><a href="#about">Kontakt</a></li>
+                <li><img class="my-photo" src="assets/maria.jpg"></li>
+                <h1>Maria Sitek</h1>
+            </ul>
         </div>
-        <div class="about child ">
+    </nav>
+    <div class="container" style="margin-left:25%;padding:1px 16px">
+        <div class="about">
             <h2>Witaj</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
-            <a><i class="fab fa-facebook-f "></i></a>
-            <a><i class="fab fa-facebook-f "></i></a>
-            <a><i class="fab fa-facebook-f "></i></a>
-            <a><i class="fab fa-facebook-f "></i></a>
+            <a href="#"><i class="fab fa-facebook-f "></i></a>
+            <a href="#"><i class="fab fa-facebook-f "></i></a>
+            <a href="#"><i class="fab fa-facebook-f "></i></a>
+            <a href="#"><i class="fab fa-facebook-f "></i></a>
         </div>
     </div>
-    <div class="examples " style="margin-left:25%;padding:1px 16px;height:1000px">
-        <div class="test ">
-            <img class="left " src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
+    <div class="examples" style="margin-left:25%;padding:1px 16px">
+        <div>
+            <img class="img-p" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
             <div class="description ">
-                <h2 class="name ">Logo</h2>
+                <a href="#">
+                    <h2 class="name ">Logo</h2>
+                </a>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ad.
                 </p>
             </div>
         </div>
-        <div class="test ">
-            <img class="left " src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
+        <div>
+            <img class="img-p" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
             <div class="description ">
-                <h2 class="name ">Banery</h2>
+                <a href="#">
+                    <h2 class="name ">Banery</h2>
+                </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, itaque.</p>
             </div>
         </div>
-        <div class="test ">
-            <img class="left " src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
+        <div>
+            <img class="img-p" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
             <div class="description ">
-                <h2 class="name ">Inne</h2>
+                <a href="#">
+                    <h2 class="name ">Inne</h2>
+                </a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, placeat!</p>
             </div>
         </div>
