new responsive ayout

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </div>
     </nav>
-    <div class="container" style="margin-left:25%;padding:1px 16px">
+    <div class="container" style="padding:1px 16px">
         <div class="about">
             <h2>Witaj</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
@@ -34,7 +34,7 @@
             <a href="#"><i class="fab fa-facebook-f "></i></a>
         </div>
     </div>
-    <div class="examples" style="margin-left:25%;padding:1px 16px">
+    <div class="examples" style="padding:1px 16px">
         <div>
             <img class="img-p" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
             <div class="description ">
@@ -63,6 +63,10 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, placeat!</p>
             </div>
         </div>
+    </div>
+    <div class="for-mobile">
+        <img class="my-photo" src="assets/maria.jpg">
+        <h1>Maria Sitek</h1>
     </div>
 
     <script src="https://kit.fontawesome.com/a076d05399.js "></script>
