--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="circle">
             <ul>
                 <li><a class="active" href="index.html">Start</a></li>
-                <li><a href="#news">CV</a></li>
-                <li><a href="#contact">Galeria</a></li>
-                <li><a href="#about">Kontakt</a></li>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="gallery.html">Galeria</a></li>
+                <li><a href="contact.html">Kontakt</a></li>
                 <li><img class="my-photo" src="assets/maria.jpg"></li>
                 <h1>Maria Sitek</h1>
             </ul>
