--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a class="active" href="index.html">Start</a></li>
                 <li><a href="cv.html">CV</a></li>
-                <li><a href="gallery.html">Galeria</a></li>
+                <!-- <li><a href="gallery.html">Galeria</a></li> -->
                 <li><a href="contact.html">Kontakt</a></li>
                 <li><img class="my-photo" src="assets/maria.jpg"></li>
                 <h1>Maria Sitek</h1>
@@ -28,7 +28,7 @@
             <h2>Kontakt</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
-            <a class="btn" href="mailto:danceornothing@gmail.com">Wyślij e-mail</a><br>
+            <a class="btn" href="mailto:mariasitek1994@wp.pl">Wyślij e-mail</a><br>
             <a href="#"><i class="fab fa-facebook-f contact"></i></a>
             <a href="#"><i class="fab fa-facebook-f contact"></i></a>
             <a href="#"><i class="fab fa-facebook-f contact"></i></a>
