--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a class="active" href="index.html">Start</a></li>
                 <li><a href="cv.html">CV</a></li>
-                <li><a href="gallery.html">Galeria</a></li>
+                <!-- <li><a href="gallery.html">Galeria</a></li> -->
                 <li><a href="contact.html">Kontakt</a></li>
                 <li><img class="my-photo" src="assets/maria.jpg"></li>
                 <h1>Maria Sitek</h1>
@@ -38,7 +38,7 @@
         <div>
             <img class="img-p" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
             <div class="description ">
-                <a href="#">
+                <a href="logo.html">
                     <h2 class="name ">Logo</h2>
                 </a>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ad.
@@ -48,7 +48,7 @@
         <div>
             <img class="img-p" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
             <div class="description ">
-                <a href="#">
+                <a href="banners.html">
                     <h2 class="name ">Banery</h2>
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, itaque.</p>
@@ -57,7 +57,7 @@
         <div>
             <img class="img-p" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
             <div class="description ">
-                <a href="#">
+                <a href="other.html">
                     <h2 class="name ">Inne</h2>
                 </a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, placeat!</p>
@@ -70,6 +70,7 @@
     </div>
 
     <script src="https://kit.fontawesome.com/a076d05399.js "></script>
+    <script src="script.js "></script>
 
 </body>
 
