--- a/cv.html
+++ b/cv.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a class="active" href="index.html">Start</a></li>
                 <li><a href="cv.html">CV</a></li>
-                <li><a href="gallery.html">Galeria</a></li>
+                <!-- <li><a href="gallery.html">Galeria</a></li> -->
                 <li><a href="contact.html">Kontakt</a></li>
                 <li><img class="my-photo" src="assets/maria.jpg"></li>
                 <h1>Maria Sitek</h1>
@@ -31,7 +31,7 @@
 
             <img class="cv" src="assets/cv.jpg"><br>
 
-            <a class="btn" href="mailto:danceornothing@gmail.com">Wyślij e-mail</a><br>
+            <a class="btn" href="mailto:mariasitek1994@wp.pl">Wyślij e-mail</a><br>
             <a href="#"><i class="fab fa-facebook-f contact"></i></a>
             <a href="#"><i class="fab fa-facebook-f contact"></i></a>
             <a href="#"><i class="fab fa-facebook-f contact"></i></a>
