--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css?family=Exo:200,400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Akronim|Crimson+Text&display=swap" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="dev-assets/custom.css">
 </head>
@@ -14,10 +15,10 @@
     <nav class="nav-bar">
         <div class="circle">
             <ul>
-                <li><a class="active" href="index.html">Start</a></li>
-                <li><a href="cv.html">CV</a></li>
+                <li><a class="active" href="index.html"><i class="fas fa-home"></i> Start</a></li>
+                <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li>
                 <!-- <li><a href="gallery.html">Galeria</a></li> -->
-                <li><a href="contact.html">Kontakt</a></li>
+                <li><a href="contact.html"><i class="fas fa-address-book"></i> Kontakt</a></li>
                 <li><img class="my-photo" src="assets/maria.jpg"></li>
                 <h1>Maria Sitek</h1>
             </ul>
