--- a/logo.html
+++ b/logo.html
@@ -14,10 +14,10 @@
     <nav class="nav-bar">
         <div class="circle">
             <ul>
-                <li><a class="active" href="index.html">Start</a></li>
-                <li><a href="cv.html">CV</a></li>
+                <li><a class="active" href="index.html"><i class="fas fa-home"></i> Start</a></li>
+                <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li>
                 <!-- <li><a href="gallery.html">Galeria</a></li> -->
-                <li><a href="contact.html">Kontakt</a></li>
+                <li><a href="contact.html"><i class="fas fa-address-book"></i> Kontakt</a></li>
                 <li><img class="my-photo" src="assets/maria.jpg"></li>
                 <h1>Maria Sitek</h1>
             </ul>
