--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,13 @@
                 <!-- <li><a href="gallery.html">Galeria</a></li> -->
                 <li><a href="contact.html"><i class="fas fa-address-book"></i> Kontakt</a></li>
                 <li><img class="my-photo" src="assets/maria.jpg"></li>
-                <h1>Maria Sitek</h1>
+                <h2>Maria Sitek</h2>
+                <div class="nav-grid">
+                    <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+                </div>
             </ul>
         </div>
     </nav>
@@ -29,10 +35,6 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
             <a class="btn" href="mailto:mariasitek1994@wp.pl">Wyślij e-mail</a><br>
-            <a href="#"><i class="fab fa-facebook-f contact"></i></a>
-            <a href="#"><i class="fab fa-facebook-f contact"></i></a>
-            <a href="#"><i class="fab fa-facebook-f contact"></i></a>
-            <a href="#"><i class="fab fa-facebook-f contact"></i></a>
         </div>
     </div>
 
