--- a/cv.html
+++ b/cv.html
@@ -16,10 +16,15 @@
             <ul>
                 <li><a class="active" href="index.html"><i class="fas fa-home"></i> Start</a></li>
                 <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li>
-                <!-- <li><a href="gallery.html">Galeria</a></li> -->
                 <li><a href="contact.html"><i class="fas fa-address-book"></i> Kontakt</a></li>
                 <li><img class="my-photo" src="assets/maria.jpg"></li>
-                <h1>Maria Sitek</h1>
+                <h2>Maria Sitek</h2>
+                <div class="nav-grid">
+                    <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+                </div>
             </ul>
         </div>
     </nav>
@@ -32,10 +37,6 @@
             <img class="cv" src="assets/cv.jpg"><br>
 
             <a class="btn" href="mailto:mariasitek1994@wp.pl">Wyślij e-mail</a><br>
-            <a href="#"><i class="fab fa-facebook-f contact"></i></a>
-            <a href="#"><i class="fab fa-facebook-f contact"></i></a>
-            <a href="#"><i class="fab fa-facebook-f contact"></i></a>
-            <a href="#"><i class="fab fa-facebook-f contact"></i></a>
         </div>
     </div>
 
