--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
             <ul>
                 <li><a class="active" href="index.html"><i class="fas fa-home"></i> Start</a></li>
                 <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li>
-                <!-- <li><a href="gallery.html">Galeria</a></li> -->
                 <li><a href="contact.html"><i class="fas fa-address-book"></i> Kontakt</a></li>
                 <li><img class="my-photo" src="assets/maria.jpg"></li>
-                <h1>Maria Sitek</h1>
+                <h2>Maria Sitek</h2>
+                <div class="nav-grid">
+                    <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+                </div>
             </ul>
         </div>
     </nav>
@@ -29,10 +34,6 @@
             <h2>Witaj</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
-            <a href="#"><i class="fab fa-facebook-f "></i></a>
-            <a href="#"><i class="fab fa-facebook-f "></i></a>
-            <a href="#"><i class="fab fa-facebook-f "></i></a>
-            <a href="#"><i class="fab fa-facebook-f "></i></a>
         </div>
     </div>
     <div class="examples" style="padding:1px 16px">
