--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
                 <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li>
                 <!-- <li><a href="gallery.html">Galeria</a></li> -->
                 <li><a href="contact.html"><i class="fas fa-address-book"></i> Kontakt</a></li>
-                <li><img class="my-photo" src="assets/maria.jpg"></li>
+                <div class="nav-grid"><img class="my-photo" src="assets/maria.jpg"></div>
                 <h2>Maria Sitek</h2>
                 <div class="nav-grid">
                     <a href="#"><i class="fab fa-facebook-f contact"></i></a>
@@ -33,7 +33,7 @@
         <div class="about">
             <h2>Kontakt</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
+            <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
             <a class="btn" href="mailto:mariasitek1994@wp.pl">Wyślij e-mail</a><br>
         </div>
     </div>
