--- a/cv.html
+++ b/cv.html
@@ -17,7 +17,7 @@
                 <li><a class="active" href="index.html"><i class="fas fa-home"></i> Start</a></li>
                 <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li>
                 <li><a href="contact.html"><i class="fas fa-address-book"></i> Kontakt</a></li>
-                <li><img class="my-photo" src="assets/maria.jpg"></li>
+                <div class="nav-grid"><img class="my-photo" src="assets/maria.jpg"></div>
                 <h2>Maria Sitek</h2>
                 <div class="nav-grid">
                     <a href="#"><i class="fab fa-facebook-f contact"></i></a>
@@ -32,7 +32,7 @@
         <div class="about">
             <h2>CV</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
+            <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
 
             <img class="cv" src="assets/cv.jpg"><br>
 
