--- a/logo.html
+++ b/logo.html
@@ -18,7 +18,7 @@
                 <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li>
                 <!-- <li><a href="gallery.html">Galeria</a></li> -->
                 <li><a href="contact.html"><i class="fas fa-address-book"></i> Kontakt</a></li>
-                <li><img class="my-photo" src="assets/maria.jpg"></li>
+                <div class="nav-grid"><img class="my-photo" src="assets/maria.jpg"></div>
                 <h2>Maria Sitek</h2>
                 <div class="nav-grid">
                     <a href="#"><i class="fab fa-facebook-f contact"></i></a>
