--- a/other.html
+++ b/other.html
@@ -17,7 +17,7 @@
                 <li><a class="active" href="index.html"><i class="fas fa-home"></i> Start</a></li>
                 <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li>
                 <li><a href="contact.html"><i class="fas fa-address-book"></i> Kontakt</a></li>
-                <li><img class="my-photo" src="assets/maria.jpg"></li>
+                <div class="nav-grid"><img class="my-photo" src="assets/maria.jpg"></div>
                 <h2>Maria Sitek</h2>
                 <div class="nav-grid">
                     <a href="#"><i class="fab fa-facebook-f contact"></i></a>
