--- a/links.html
+++ b/links.html
@@ -31,13 +31,12 @@
     </nav>
     <div class="container" style="padding:1px 16px">
         <div class="about">
-            <h2>CV</h2>
+            <h2>Współpraca</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
             <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
+            <a class="admaker btn" href="http://www.admaker.pl/">AdMaker</a>
+            <a class="admaker btn" href="https://www.willapienkowskich.pl/">Willa Pieńskowskich</a>
 
-            <img class="cv" src="assets/cv.jpg"><br>
-
-            <a class="btn" href="mailto:mariasitek1994@wp.pl">Wyślij e-mail</a><br>
         </div>
     </div>
 
