--- a/other.html
+++ b/other.html
@@ -17,6 +17,7 @@
                 <li><a class="active" href="index.html"><i class="fas fa-home"></i> Start</a></li>
                 <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li>
                 <li><a href="contact.html"><i class="fas fa-address-book"></i> Kontakt</a></li>
+                <li><a href="links.html"><i class="fas fa-link"></i></i> Współpraca</a></li>
                 <div class="nav-grid"><img class="my-photo" src="assets/maria.jpg"></div>
                 <h2>Maria Sitek</h2>
                 <div class="nav-grid">
