changes in layout

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="circle">
             <ul>
                 <li><a class="active" href="index.html"><i class="fas fa-home"></i> Start</a></li>
-                <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li>
+                <!-- <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li> -->
                 <li><a href="contact.html"><i class="fas fa-address-book"></i> Kontakt</a></li>
                 <li><a href="links.html"><i class="fas fa-link"></i></i> Współpraca</a></li>
                 <div class="nav-grid"><img class="my-photo" src="assets/maria.jpg"></div>
@@ -39,17 +39,17 @@
     </div>
     <div class="examples" style="padding:1px 16px">
         <div>
-            <img class="img-p" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
+            <img class="img-p" src="assets/Rysunki/oko.jpg">
             <div class="description ">
                 <a href="logo.html">
-                    <h2 class="name ">Logo</h2>
+                    <h2 class="name ">Rysunki</h2>
                 </a>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ad.
                 </p>
             </div>
         </div>
         <div>
-            <img class="img-p" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
+            <img class="img-p" src="assets/banery/chmurki.png ">
             <div class="description ">
                 <a href="banners.html">
                     <h2 class="name ">Banery</h2>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div>
-            <img class="img-p" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg ">
+            <img class="img-p" src="assets/inne/misserce.png ">
             <div class="description ">
                 <a href="other.html">
                     <h2 class="name ">Inne</h2>
@@ -70,6 +70,12 @@
     <div class="for-mobile">
         <img class="my-photo" src="assets/maria.jpg">
         <h1>Maria Sitek</h1>
+        <div class="nav-grid">
+            <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+            <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+            <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+            <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+        </div>
     </div>
 
     <script src="https://kit.fontawesome.com/a076d05399.js "></script>
