--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <div class="circle">
             <ul>
                 <li><a class="active" href="index.html"><i class="fas fa-home"></i> Start</a></li>
-                <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li>
+                <!-- <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li> -->
                 <!-- <li><a href="gallery.html">Galeria</a></li> -->
                 <li><a href="contact.html"><i class="fas fa-address-book"></i> Kontakt</a></li>
                 <li><a href="links.html"><i class="fas fa-link"></i></i> Współpraca</a></li>
