--- a/logo.html
+++ b/logo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
+    <title>Rysunki</title>
     <link href="https://fonts.googleapis.com/css?family=Akronim|Crimson+Text&display=swap" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="dev-assets/custom.css">
 </head>
@@ -15,7 +15,7 @@
         <div class="circle">
             <ul>
                 <li><a class="active" href="index.html"><i class="fas fa-home"></i> Start</a></li>
-                <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li>
+                <!-- <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li> -->
                 <!-- <li><a href="gallery.html">Galeria</a></li> -->
                 <li><a href="contact.html"><i class="fas fa-address-book"></i> Kontakt</a></li>
                 <li><a href="links.html"><i class="fas fa-link"></i></i> Współpraca</a></li>
@@ -32,7 +32,7 @@
     </nav>
     <div class="container" style="padding:1px 16px">
         <div class="about">
-            <h2>Logo</h2>
+            <h2>Rysunki</h2>
 
 
 
@@ -42,20 +42,20 @@
                 <!-- Full-width images with number text -->
                 <div class="mySlides">
                     <div class="numbertext">1 / 6</div>
-                    <img src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%">
+                    <img src="assets/Rysunki//oko.jpg" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">2 / 6</div>
-                    <img src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%">
+                    <img src="assets/Rysunki//orzeł.jpg" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">3 / 6</div>
-                    <img src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%">
+                    <img src="assets/Rysunki//królik.jpg" style="width:100%">
                 </div>
 
-                <div class="mySlides">
+                <!-- <div class="mySlides">
                     <div class="numbertext">4 / 6</div>
                     <img src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%">
                 </div>
@@ -68,7 +68,7 @@
                 <div class="mySlides">
                     <div class="numbertext">6 / 6</div>
                     <img src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%">
-                </div>
+                </div> -->
 
                 <!-- Next and previous buttons -->
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -82,15 +82,15 @@
                 <!-- Thumbnail images -->
                 <div class="row">
                     <div class="column">
-                        <img class="demo cursor" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+                        <img class="demo cursor" src="assets/Rysunki//oko.jpg" style="width:100%" onclick="currentSlide(1)" alt="">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+                        <img class="demo cursor" src="assets/Rysunki/orzeł.jpg" style="width:100%" onclick="currentSlide(2)" alt="">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+                        <img class="demo cursor" src="assets/Rysunki//królik.jpg" style="width:100%" onclick="currentSlide(3)" alt="">
                     </div>
-                    <div class="column">
+                    <!-- <div class="column">
                         <img class="demo cursor" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
                     </div>
                     <div class="column">
@@ -98,7 +98,7 @@
                     </div>
                     <div class="column">
                         <img class="demo cursor" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
