--- a/other.html
+++ b/other.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
+    <title>Inne</title>
     <link href="https://fonts.googleapis.com/css?family=Akronim|Crimson+Text&display=swap" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="dev-assets/custom.css">
 </head>
@@ -15,7 +15,7 @@
         <div class="circle">
             <ul>
                 <li><a class="active" href="index.html"><i class="fas fa-home"></i> Start</a></li>
-                <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li>
+                <!-- <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li> -->
                 <li><a href="contact.html"><i class="fas fa-address-book"></i> Kontakt</a></li>
                 <li><a href="links.html"><i class="fas fa-link"></i></i> Współpraca</a></li>
                 <div class="nav-grid"><img class="my-photo" src="assets/maria.jpg"></div>
@@ -41,32 +41,32 @@
                 <!-- Full-width images with number text -->
                 <div class="mySlides">
                     <div class="numbertext">1 / 6</div>
-                    <img src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%">
+                    <img src="assets/inne/justyna.png" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">2 / 6</div>
-                    <img src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%">
+                    <img src="assets/inne/misserce.png" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">3 / 6</div>
-                    <img src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%">
+                    <img src="assets/inne/nowyvoucher.png" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">4 / 6</div>
-                    <img src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%">
+                    <img src="assets/inne/statek.png" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">5 / 6</div>
-                    <img src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%">
+                    <img src="assets/inne/voucher1.png" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">6 / 6</div>
-                    <img src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%">
+                    <img src="assets/inne/willapapier.png" style="width:100%">
                 </div>
 
                 <!-- Next and previous buttons -->
@@ -81,22 +81,22 @@
                 <!-- Thumbnail images -->
                 <div class="row">
                     <div class="column">
-                        <img class="demo cursor" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+                        <img class="demo cursor" src="assets/inne/justyna.png" style="width:100%" onclick="currentSlide(1)" alt="">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+                        <img class="demo cursor" src="assets/inne/misserce.png" style="width:100%" onclick="currentSlide(2)" alt="">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+                        <img class="demo cursor" src="assets/inne/nowyvoucher.png" style="width:100%" onclick="currentSlide(3)" alt="">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+                        <img class="demo cursor" src="assets/inne/statek.png" style="width:100%" onclick="currentSlide(4)" alt="">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
+                        <img class="demo cursor" src="assets/inne/voucher1.png" style="width:100%" onclick="currentSlide(5)" alt="">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
+                        <img class="demo cursor" src="assets/Inne/willapapier.png" style="width:100%" onclick="currentSlide(6)" alt="">
                     </div>
                 </div>
             </div>
