--- a/banners.html
+++ b/banners.html
@@ -47,7 +47,7 @@
 
                 <div class="mySlides">
                     <div class="numbertext">2 / 6</div>
-                    <img src="assets/banery/chmurki.png" style="width:100%">
+                    <img src="assets/Banery/chmurki.png" style="width:100%">
                 </div>
 
                 <div class="mySlides">
