--- a/banners.html
+++ b/banners.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CBanery</title>
+    <title>Banery</title>
     <link href="https://fonts.googleapis.com/css?family=Akronim|Crimson+Text&display=swap" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="dev-assets/custom.css">
 </head>
