--- a/banners.html
+++ b/banners.html
@@ -42,7 +42,7 @@
                 <!-- Full-width images with number text -->
                 <div class="mySlides">
                     <div class="numbertext">1 / 6</div>
-                    <img src="assets/banery/admaker tlo.png" style="width:100%">
+                    <img src="assets/Banery/admaker tlo.png" style="width:100%">
                 </div>
 
                 <div class="mySlides">
@@ -52,7 +52,7 @@
 
                 <div class="mySlides">
                     <div class="numbertext">3 / 6</div>
-                    <img src="assets/banery/japonia.jpg" style="width:100%">
+                    <img src="assets/Banery/japonia.jpg" style="width:100%">
                 </div>
 
                 <!-- <div class="mySlides">
@@ -85,10 +85,10 @@
                         <img class="demo cursor" src="assets/Banery/admaker tlo.png" style="width:100%" onclick="currentSlide(1)" alt="">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="assets/banery/chmurki.png" style="width:100%" onclick="currentSlide(2)" alt="">
+                        <img class="demo cursor" src="assets/Banery/chmurki.png" style="width:100%" onclick="currentSlide(2)" alt="">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="assets/banery/japonia.jpg" style="width:100%" onclick="currentSlide(3)" alt="">
+                        <img class="demo cursor" src="assets/Banery/japonia.jpg" style="width:100%" onclick="currentSlide(3)" alt="">
                     </div>
                     <!-- <div class="column">
                         <img class="demo cursor" src="assets/80472572_2367659296877934_6362717796727521280_n.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
