--- a/logo.html
+++ b/logo.html
@@ -42,17 +42,17 @@
                 <!-- Full-width images with number text -->
                 <div class="mySlides">
                     <div class="numbertext">1 / 6</div>
-                    <img src="assets/Rysunki//oko.jpg" style="width:100%">
+                    <img src="assets/Rysunki/oko.jpg" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">2 / 6</div>
-                    <img src="assets/Rysunki//orzeł.jpg" style="width:100%">
+                    <img src="assets/Rysunki/orzeł.jpg" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">3 / 6</div>
-                    <img src="assets/Rysunki//królik.jpg" style="width:100%">
+                    <img src="assets/Rysunki/królik.jpg" style="width:100%">
                 </div>
 
                 <!-- <div class="mySlides">
