--- a/other.html
+++ b/other.html
@@ -41,32 +41,32 @@
                 <!-- Full-width images with number text -->
                 <div class="mySlides">
                     <div class="numbertext">1 / 6</div>
-                    <img src="assets/inne/justyna.png" style="width:100%">
+                    <img src="assets/Inne/justyna.png" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">2 / 6</div>
-                    <img src="assets/inne/misserce.png" style="width:100%">
+                    <img src="assets/Inne/misserce.png" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">3 / 6</div>
-                    <img src="assets/inne/nowyvoucher.png" style="width:100%">
+                    <img src="assets/Inne/nowyvoucher.png" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">4 / 6</div>
-                    <img src="assets/inne/statek.png" style="width:100%">
+                    <img src="assets/Inne/statek.png" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">5 / 6</div>
-                    <img src="assets/inne/voucher1.png" style="width:100%">
+                    <img src="assets/Inne/voucher1.png" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">6 / 6</div>
-                    <img src="assets/inne/willapapier.png" style="width:100%">
+                    <img src="assets/Inne/willapapier.png" style="width:100%">
                 </div>
 
                 <!-- Next and previous buttons -->
@@ -81,19 +81,19 @@
                 <!-- Thumbnail images -->
                 <div class="row">
                     <div class="column">
-                        <img class="demo cursor" src="assets/inne/justyna.png" style="width:100%" onclick="currentSlide(1)" alt="">
+                        <img class="demo cursor" src="assets/Inne/justyna.png" style="width:100%" onclick="currentSlide(1)" alt="">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="assets/inne/misserce.png" style="width:100%" onclick="currentSlide(2)" alt="">
+                        <img class="demo cursor" src="assets/Inne/misserce.png" style="width:100%" onclick="currentSlide(2)" alt="">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="assets/inne/nowyvoucher.png" style="width:100%" onclick="currentSlide(3)" alt="">
+                        <img class="demo cursor" src="assets/Inne/nowyvoucher.png" style="width:100%" onclick="currentSlide(3)" alt="">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="assets/inne/statek.png" style="width:100%" onclick="currentSlide(4)" alt="">
+                        <img class="demo cursor" src="assets/Inne/statek.png" style="width:100%" onclick="currentSlide(4)" alt="">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="assets/inne/voucher1.png" style="width:100%" onclick="currentSlide(5)" alt="">
+                        <img class="demo cursor" src="assets/Inne/voucher1.png" style="width:100%" onclick="currentSlide(5)" alt="">
                     </div>
                     <div class="column">
                         <img class="demo cursor" src="assets/Inne/willapapier.png" style="width:100%" onclick="currentSlide(6)" alt="">
