--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div>
-            <img class="img-p" src="assets/banery/chmurki.png ">
+            <img class="img-p" src="assets/Banery/chmurki.png ">
             <div class="description ">
                 <a href="banners.html">
                     <h2 class="name ">Banery</h2>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div>
-            <img class="img-p" src="assets/inne/misserce.png ">
+            <img class="img-p" src="assets/Inne/misserce.png ">
             <div class="description ">
                 <a href="other.html">
                     <h2 class="name ">Inne</h2>
