--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <div class="nav-grid"><img class="my-photo" src="assets/maria.jpg"></div>
                 <h2>Maria Sitek</h2>
                 <div class="nav-grid">
-                    <a href="#"><i class="fab fa-facebook-f contact"></i></a>
-                    <a href="#"><i class="fab fa-facebook-f contact"></i></a>
-                    <a href="#"><i class="fab fa-facebook-f contact"></i></a>
-                    <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f contact-nav"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f contact-nav"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f contact-nav"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f contact-nav"></i></a>
                 </div>
             </ul>
         </div>
@@ -71,10 +71,10 @@
         <img class="my-photo" src="assets/maria.jpg">
         <h1>Maria Sitek</h1>
         <div class="nav-grid">
-            <a href="#"><i class="fab fa-facebook-f contact"></i></a>
-            <a href="#"><i class="fab fa-facebook-f contact"></i></a>
-            <a href="#"><i class="fab fa-facebook-f contact"></i></a>
-            <a href="#"><i class="fab fa-facebook-f contact"></i></a>
+            <a href="#"><i class="fab fa-facebook-f contact-main"></i></a>
+            <a href="#"><i class="fab fa-facebook-f contact-main"></i></a>
+            <a href="#"><i class="fab fa-facebook-f contact-main"></i></a>
+            <a href="#"><i class="fab fa-facebook-f contact-main"></i></a>
         </div>
     </div>
 
