--- a/other.html
+++ b/other.html
@@ -41,7 +41,7 @@
                 <!-- Full-width images with number text -->
                 <div class="mySlides">
                     <div class="numbertext">1 / 6</div>
-                    <img src="assets/Inne/justyna.png" style="width:100%">
+                    <img src="assets/Inne/justyna.png" style="width:100%" class="slide">
                 </div>
 
                 <div class="mySlides">
