--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,8 @@
     <div class="container" style="padding:1px 16px">
         <div class="about">
             <h2>Kontakt</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
-            <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
+            <p>Jeśli spodobały Ci się moje prace zamieszczone na tej stronie, bądź pewny, że Twój projekt również Ci się spodoba. Widzisz to oczyma wyobraźni? Ja widzę!</p>
+            <p class="info">Serdecznie zapraszam do kontaku. Klilając w poniższy przycisk możesz bez problemu wysłać do mnie e-mail. Nie jesteś fanem maili? Nie szkodzi. Sprawdź moje profile społecznościowe!</p>
             <a class="btn" href="mailto:mariasitek1994@wp.pl">Wyślij e-mail</a><br>
         </div>
     </div>
