--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
     </nav>
     <div class="container" style="padding:1px 16px">
         <div class="about">
-            <h2>Witaj</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
+            <h2>Cześć</h2>
+            <p>Nazywam się Maria Sitek i jestem grafikiem. Od namłodszych lat sztuka jest moją pasją, którą chcę się dzielić. Mimo, iż od lat nie obce mi były rysunki i szkice, postanowiłam, że czas zabrać się do pracy i ukończyłam kurs grafiki komputerowej.</p>
+            <p>Robię na zamówienie bardzo zróżnicowane projekty. Od papieru firmowego, przez logo, banery czy wizytówki. Pracuję na najnowszych wersjach programów graficznych i stale się kształcę. Możesz być pewny, że Twoje zlecenie zostanie wykonane z dbałością
+                o szczegóły oraz będzie odpowiadało Twoim potrzebom. Każdy projekt traktuję niezwykle poważnie i możesz być pewny, że staniesz się moim priorytetem. Zapraszam do kontaktu.</p>
         </div>
     </div>
     <div class="examples" style="padding:1px 16px">
