--- a/links.html
+++ b/links.html
@@ -32,8 +32,8 @@
     <div class="container" style="padding:1px 16px">
         <div class="about">
             <h2>Współpraca</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
-            <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et nobis asperiores sunt est ipsa quae architecto! Natus, placeat dolorum!</p>
+            <p>Choć w zawodzie nie pracuję długo, mam a swoim koncie kilka projektów dla firm, z którymi współpracuję. Między innymi jest to agencja reklamowa AdMaker.</p>
+            <p class="info">Zapraszam na ich strony internetowe. Ja znalazłam u nich swoje miejsce. Być może Ty również znajdziesz.</p>
             <a class="admaker btn" href="http://www.admaker.pl/">AdMaker</a>
             <a class="admaker btn" href="https://www.willapienkowskich.pl/">Willa Pieńskowskich</a>
 
